[gd_scene load_steps=5 format=3 uid="uid://dnqsla2wbfh5q"]

[ext_resource type="Script" path="res://scenes/music_btn.gd" id="1_1op1y"]
[ext_resource type="Texture2D" uid="uid://bpmtb5pqsqail" path="res://sprites/music_off.png" id="1_v7l21"]
[ext_resource type="Texture2D" uid="uid://cwvw4pq8jrx7p" path="res://sprites/music_on.png" id="2_conia"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m32jy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_conia")
}, {
"duration": 1.0,
"texture": ExtResource("1_v7l21")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="music_btn" type="Node2D"]
script = ExtResource("1_1op1y")

[node name="sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m32jy")

[node name="btn" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -41.0
offset_top = -28.0
offset_right = 40.0
offset_bottom = 26.0
flat = true

[connection signal="focus_entered" from="btn" to="." method="_on_btn_focus_entered"]
[connection signal="mouse_entered" from="btn" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="btn" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
